--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link type="text/css" rel="stylesheet" href="/main.css" />
 <h1 id="vinylhawk">VinylHawk</h1>
 <p>VinylHawk is a dynamic vinyl pricing engine. We analyse popular marketplaces for your current listings, and use Machine Learning to predict the best prices to help sellers generate more sales.</p>
 <h2 id="how-it-works">How It Works</h2>
