--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <p><img src="vhlogo.png" alt="vinylhawk" width="100" align="right"></p>
   <h1 id="vinylhawk">VinylHawk</h1>
   <p>VinylHawk is a dynamic <b>Vinyl Pricing Engine</b>. We analyse popular marketplaces for your current listings, and use Machine Learning to predict the best prices to help sellers generate more sales.</p>
-  <h2 id="how-it-works">How It Works</h2>
+  <h2 id="philosophy">Philosophy</h2>
   <p>Being records collectors ourselves, we realized that adjusting prices for hundreds or thousands of items, while keeping track of the supply/demand in the marketplace, and while maximizing your own profit margins is a task that takes time and energy. VinylHawk aims to help you do this. Our algorithms keep track of the supply and demand per item, and offer pricing suggestions in a CSV, so that your items are seen consistently on top of Discogs marketplace listings, ultimately leading to more sales on your records. It&#39;s <b>completely upto you</b> if you decide to adjust prices by uploading the CSV to Discogs or another marketplace of your choice.</p>
+  <h2 id="how-it-works">How It Works</h2>
+  <p>Send us your Discogs Seller Username. That's it! We'll generate a report of items that need to be repriced to compete in the marketplace, powered by Machine Learning. You can also give us custom parameters on how you want the Pricing Engine to calculate updates, i.e only compete with US sellers or German sellers, etc..</p>  
   <h2 id="who-we-are">Who We Are</h2>
   <p>We are a small team of data scientists and engineers, who are passionate about Vinyl!</p>
   <p><img src="vinyl.jpg" alt="vinyl" align="center"></p>
